Edits in HTML, CSS, and README

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,14 +37,13 @@ body {
 
 /* 
     Replace the <div> tag with <nav> tag to match the changes made in HTML.
-    Since I replace the tags, the inline on top of the screen moved from the top left to below Horiseon.
     Remove <.header> from <ul> and <ul li>.
 */
-nav ul {
+section ul {
     list-style-type: none;
 }
 
-nav ul li {
+section ul li {
     display: inline-block;
     margin-right: 25px;
 }
