--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,11 +39,11 @@ body {
     Replace the <div> tag with <nav> tag to match the changes made in HTML.
     Remove <.header> from <ul> and <ul li>.
 */
-section ul {
+nav ul {
     list-style-type: none;
 }
 
-section ul li {
+nav ul li {
     display: inline-block;
     margin-right: 25px;
 }
