--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,26 +8,28 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* Remove class from all <header> */
+
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
 /* 
     Replace the <div> tag with <nav> tag to match the changes made in HTML.
 */
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
